test/pass/48-recursive_lambda.perk
import "stdio.h"

fun main (): void {
	let factorial := (n: int): int {
		if (n <= 1) {return n};
		return n * factorial (n-1)
	};

	printf ("%d\n", factorial(5));
}