test/fail/05-wrong_return_type.perk
fun main(): void {
    return 10;
}